# bits-and-books-information-management-system

./: .gitignore  Create_tables  README.md  identifier.sqlite  pyproject.toml  requirements.txt
helper-scripts/: csv_generator.py  requirements.txt  zip_code_generator.py
sql-database/: README.md
sql-database/data-loader-utils/: csv_generator.py  data_loader.py  zip_code_printer.py
sql-database/example-sql/: insert_deletes.sql  transactions.sql  views.sql
src/: schema.sql
src/data/: Admin.csv  Authors.csv  BookAuthors.csv  Books.csv  Customer.csv  Publishers.csv  Warehouse.csv  Zips.csv  authors.csv  proj-data.xls  proj-data.xlsx  us_zips_csv.csv
src/indexes/: examples.sql
src/schemas/: schema.sql
src/sql_queries/: WorksheetTwoAdvancedQueries.sql  WorksheetTwoExtraQueries.sql  WorksheetTwoSimpleQueries.sql
src/utils/: csv_generator.py  data_loader.py  zip_code_printer.py
