[tool.poetry]
name = "bits-and-books-information-management-system"
version = "0.1.0"
description = ""
authors = ["jules319 <jules31901@gmail.com>"]
readme = "README.md"
packages = [{include = "bits_and_books_information_management_system"}]

[tool.poetry.dependencies]
python = "^3.10"
et-xmlfile = "^1.1.0"
numpy = "^1.24.3"
openpyxl = "^3.1.2"
pandas = "^2.0.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
six = "^1.16.0"
xlrd = "^2.0.1"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
